feat(images): 새로운 스크린샷 이미지 파일 추가 스크린샷을 추가하여 문서의 시각적 자료를 보강하기 위함.

--- a/5. Zettel Kasten/Phase 1 - Notes/1200. Stock/1210. Analysis/1211. Candle/캔들의 힘.md
+++ b/5. Zettel Kasten/Phase 1 - Notes/1200. Stock/1210. Analysis/1211. Candle/캔들의 힘.md
@@ -24,6 +24,9 @@ URL :
 ![[Screenshot 2025-01-08 at 3.22.46 PM.png]]
 - T자형 캔들로 1,2번째 캔들보다 매수세가 더 강함
 - 장중 매도세가 강하였지만, 해당 매도세를 이기고 시가를 복구함
+
+![[Screenshot 2025-01-08 at 3.25.41 PM.png]]
+- 시가와 종가가 같은것으로 매수세와 매도세가 비슷함 ( 무승부 )
 ### Link of Thoughts
 Area : #1210-Analysis 
 
