시나리오 추가

--- a/5. Zettel Kasten/Phase 1 - Notes/1200. Stock/1210. 복기/1212. 프랍/2025-08-15 매매플랜.md
+++ b/5. Zettel Kasten/Phase 1 - Notes/1200. Stock/1210. 복기/1212. 프랍/2025-08-15 매매플랜.md
@@ -37,16 +37,22 @@
 
 - **핵심 아이디어 (The Narrative):**
     
-    - 4H HTF의 Bullish FVG Low가  Fibonacci 할인 영역과 겹치기 때문에 Bullish FVG Low에서 반등할 것을 기대함
+    - 1: 4H HTF의 Bullish FVG Low가  Fibonacci 할인 영역과 겹치기 때문에 Bullish FVG Low에서 반등할 것을 기대함
+    - 2: 4H HTF에서 Bearish OB 터치와 함께 BOS 가 발생하고 난 뒤 조정과 함게 FVG AVG에서 반등할 것을 기대함
         
 - **선정한 POI (Point of Interest):**
-    
+    첫번째 시나리오
     - **위치:**  4H FVG ( 23822.50 ~ 23894.75 )
         
     - **선정 이유:** HTF의 할인 영역에 있으며, 직전의 시장 구조 돌파(BOS)를 만들어낸 강력한 불균형 지역이기 때문.
+	두번째 시나리오
+	- Bearish OB 터치 이후 생겨난 FVG
         
 - **진입 확인 모델 (Entry Confirmation Model):**
-    
+    첫번째 시나리오
     - **조건:** 가격이 4H FVG에 닿은 후, 15분봉(LTF)에서 하락 구조를 깨는 시장 구조 변화(MSS/CHoCH)가 발생하는 것을 확인한다.
         
     - **진입 방식:** MSS 발생 후 생성되는 5분봉 FVG로의 되돌림에서 진입한다.
+	두번째 시나리오
+	- 조건 : 가격이 전 고가를 뚫어 BOS가 발생하고 Bearish OB에서 저항을 맞고, 올라가며 생긴 FVG 가격으로 되돌림 되는것을 확인한다.
+	- 진입 방식 :4H FVG에서 반등하는것을 확인하고 5분봉 FVG로의 되돌림에서 진입한다.
